--- a/depolyment.yml
+++ b/depolyment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: cont-1
-        image: shaikmustafa/cycle
+        image: sasikumarjada/mirchi
         ports:
         - containerPort: 80
